--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
+    "google-fonts-plugin": "^5.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.1.0",
+    "react-native-google-fonts": "0.0.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
